<resources>
    <string name="app_name">Scratch</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_redeem">Redeem</string>
    <string name="Congrat">Congratulations</string>
    <string name="No_payment">No payment Yet</string>
    <string name="Redeem">Redeem</string>
    <string name="ans_how_earn">There are two ways to earn money, 1) By inviting friends you will get $10 per invite. 2) By Scratching the Scratch cards.</string>
    <string name="ans_how_paid">You will get paid through paypal when you reached $500</string>
    <string name="ans_what_to_do">When you are having issue getting your payment, You can contact us by clicking on help button</string>
    <string name="ans_when_paid">You will get paid when you will reached to the minimum withdrawal amount of $500.</string>
    <string name="choose_payment">Choose Payment option</string>
    <string name="code_hint">ENTER INVITE CODE</string>
    <string name="daily_tasks">Daily Tasks</string>
    <string name="invite">invite</string>
    <string name="invite_code">Invite Code</string>
    <string name="invite_desc">Invite your friends and get $10, if your friend join with your invite code below</string>
    <string name="invite_enter_desc">Enter your friend invite code below and win rewards</string>
    <string name="invite_friend">Invite Friends</string>
    <string name="invite_text">Hey Check this amazing app, you can make up to $500 rewards and cash, you will get $60 sign up bonus, Just use my code below</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="minimum">Minimum withdrawal amount is $500</string>
    <string name="note">Note: Card cost will be deducted from winning price, e.g Card cost is $7 and you win $10 then only $3 will reflect to your account</string>
    <string name="optional">OPTIONAL</string>
    <string name="paypal">paypal</string>
    <string name="paytm">paytm</string>
    <string name="privacy_policy">You must agree to our privacy policy, Before clicking on sign in button</string>
    <string name="ques_how_earn">How can i earn money</string>
    <string name="ques_how_paid">How i will get paid</string>
    <string name="ques_what_to_do">What to do, When i don\'t get my payment</string>
    <string name="ques_when_paid">When will i get paid</string>
    <string name="scratch_earn">Scratch and Earn</string>
    <string name="total_earning">Total Earnings</string>
    <string name="total_invites">Total Invites</string>
    <string name="won5">You won $50</string>
    <string name="won7">You won $60</string>
</resources>